# text-to-pandas

./: .gitignore  LICENSE  Makefile  README.md  data.dvc  models.dvc  pyproject.toml
.dvc/: config
notebooks/: data_exploration.ipynb
results/: eval_predictions.csv
src/: data_downloader.py  evaluate.py  preprocess.py  test_model.py  train.py
